[package]
name = "image-interlacer"
version = "0.1.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/image-interlacer"
homepage = "https://magiclen.org/image-interlacer"
keywords = ["image", "interlacing", "gif", "jpeg", "png"]
categories = ["command-line-utilities"]
description= "It helps you interlace an image or multiple images for web-page usage."
readme = "README.md"
license = "MIT"

[badges]
travis-ci = { repository = "magiclen/image-interlacer", branch = "master" }

[profile.release]
panic = "abort"

[dependencies]
clap = "2.33.0"
image-convert = "0.5"
num_cpus = "1.10.0"
path-absolutize = "1.1.3"
scanner-rust = "1.0.6"
starts-ends-with-caseless = "0.3.1"
walkdir = "2"
pathdiff = "0.1.0"
threadpool = "1.7.1"