[package]
name = "image-interlacer"
version = "0.1.19"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
repository = "https://github.com/magiclen/image-interlacer"
homepage = "https://magiclen.org/image-interlacer"
keywords = ["image", "interlacing", "gif", "jpeg", "png"]
categories = ["command-line-utilities"]
description = "It helps you interlace an image or multiple images for web-page usage."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = "3.2.23"
concat-with = "0.2"
terminal_size = "0.2"

image-convert = "0.12"
num_cpus = "1.10"
scanner-rust = "2.0.8"
str-utils = "0.1"
pathdiff = "0.2"
threadpool = "1.7.1"

walkdir = "2.3.1"

[dependencies.path-absolutize]
version = "3"
features = ["once_cell_cache"]