[package]
name = "image-interlacer"
version = "0.1.23"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.70"
repository = "https://github.com/magiclen/image-interlacer"
homepage = "https://magiclen.org/image-interlacer"
keywords = ["image", "interlacing", "gif", "jpeg", "png"]
categories = ["command-line-utilities"]
description = "It helps you interlace an image or multiple images for web-page usage."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
clap = { version = "4", features = ["derive"] }
concat-with = "0.2"
terminal_size = "0.3"

anyhow = "1"

image-convert = "0.15"
num_cpus = "1"
scanner-rust = "2"
str-utils = "0.1"
pathdiff = "0.2"
threadpool = "1"

walkdir = "2"